syntax = "proto3";
package proto;
option go_package = ".;proto";

import "google/api/annotations.proto";

message OnlineRequest{}

message OnlineResponse {
  string neoAccount = 1;
  string ethAccount = 2;
  string neoContract = 3;
  string ethContract = 4;
  int64 activeTime = 5;
}

message EventStatCheckRequest{
  int64 type = 1;
  string hash = 2;
}

message EventStatCheckResponse {
  int64 type = 1;
  string hash = 2;
  int64 status = 3;
  int64 errno = 4;
}

message Nep5LockNoticeRequest{
  int64 type = 1;
  int64 amount = 2;
  string hash = 3;
  string txHash = 4;
}

message Nep5LockNoticeResponse {
  int64 type = 1;
  int64 result =2;
  string hash = 3;
}

service WrapperAPI{
  rpc Online(OnlineRequest) returns (OnlineResponse){
    option (google.api.http) = {
      get: "/Wrapper/online"
    };
  }
  rpc EventStatCheck(EventStatCheckRequest) returns (EventStatCheckResponse){
    option (google.api.http) = {
      get: "/Wrapper/eventstatcheck"
    };
  }
  rpc Nep5LockNotice(Nep5LockNoticeRequest) returns (Nep5LockNoticeResponse){
    option (google.api.http) = {
      get: "/Wrapper/nep5locknotice"
    };
  }
}